# pocs

./: .gitignore
ai-playground/jira-mcp-poc/: README.md  install.sh  pyproject.toml  uninstall.sh
ai-playground/jira-mcp-poc/src/jira_mcp/: auth.py  embeddings.py  jira_client.py  server.py  tools.py  vector_store.py
core-java/java-properties/: pom.xml
core-java/java-properties/src/main/java/com/pocs/properties/: PropertiesPoc.java
core-java/java-properties/src/main/resources/: app.properties
core-java/java-properties/src/test/java/com/pocs/properties/: PropertiesPocTest.java
core-java/java-properties/src/test/resources/: test.properties
poc-kdtree-scala/: kdtree.scala
